solve modal spacing bug and close by clicking off

--- a/src/css/responsive.css
+++ b/src/css/responsive.css
@@ -134,6 +134,7 @@
         width: 100%;
         max-width: 100%;
         height: 100vh;
+        padding-top: 30vh;
     }
 }
 
